--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,8 @@
         "dotenv": "^16.5.0",
         "express": "^5.1.0",
         "jsonwebtoken": "^9.0.2",
-        "nodemon": "^3.1.10"
+        "nodemon": "^3.1.10",
+        "redis": "^5.5.6",
+        "uuid": "^11.1.0"
     }
 }
