--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -9,12 +9,12 @@
         "noUnusedParameters": true,
         "erasableSyntaxOnly": true,
         "noFallthroughCasesInSwitch": true,
-        "noUncheckedSideEffectImports": true
+        "noUncheckedSideEffectImports": true,
 
-        // "baseUrl": ".",
-        // "paths": {
-        //     "@/*": ["src/*"]
-        // }
+        "baseUrl": ".",
+        "paths": {
+            "@/*": ["src/*"]
+        }
     },
     "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"]
 }
