--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
         "nodemailer": "^7.0.3",
         "nodemon": "^3.1.10",
         "redis": "^5.5.6",
+        "socket.io": "^4.8.1",
         "uuid": "^11.1.0"
     }
 }
