--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
         "express-validator": "^7.2.1",
         "jsonwebtoken": "^9.0.2",
         "mysql2": "^3.14.1",
+        "nanoid": "^3.3.11",
         "nodemailer": "^7.0.3",
         "nodemon": "^3.1.10",
         "redis": "^5.5.6",
