create test for useGetAttachments file

--- a/client/package.json
+++ b/client/package.json
@@ -1,31 +1,36 @@
 {
-  "name": "client",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@iconify/vue": "^5.0.0",
-    "@tailwindcss/vite": "^4.1.10",
-    "axios": "^1.9.0",
-    "pinia": "^3.0.3",
-    "socket.io-client": "^4.8.1",
-    "tailwindcss": "^4.1.10",
-    "vue": "^3.5.13",
-    "vue-router": "^4.5.1"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^5.2.4",
-    "@vue/test-utils": "^2.4.6",
-    "@vue/tsconfig": "^0.7.0",
-    "jsdom": "^26.1.0",
-    "typescript": "~5.8.3",
-    "vite": "^6.3.5",
-    "vitest": "^3.2.4",
-    "vue-tsc": "^2.2.8"
-  }
+    "name": "client",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vue-tsc -b && vite build",
+        "preview": "vite preview",
+        "test": "vitest",
+        "test:ui": "vitest --ui",
+        "test:watch": "vitest --watch"
+    },
+    "dependencies": {
+        "@iconify/vue": "^5.0.0",
+        "@tailwindcss/vite": "^4.1.10",
+        "axios": "^1.9.0",
+        "pinia": "^3.0.3",
+        "socket.io-client": "^4.8.1",
+        "tailwindcss": "^4.1.10",
+        "vue": "^3.5.13",
+        "vue-router": "^4.5.1"
+    },
+    "devDependencies": {
+        "@testing-library/jest-dom": "^6.6.4",
+        "@types/node": "^24.2.1",
+        "@vitejs/plugin-vue": "^5.2.4",
+        "@vue/test-utils": "^2.4.6",
+        "@vue/tsconfig": "^0.7.0",
+        "jsdom": "^26.1.0",
+        "typescript": "~5.8.3",
+        "vite": "^6.3.5",
+        "vitest": "^3.2.4",
+        "vue-tsc": "^2.2.8"
+    }
 }
