--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -3,6 +3,9 @@
     "compilerOptions": {
         "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
 
+        "types": ["vitest/globals"],
+        "moduleResolution": "node",
+        "target": "ESNext",
         /* Linting */
         "strict": true,
         "noUnusedLocals": true,
