--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
         "vue-router": "^4.5.1"
     },
     "devDependencies": {
+        "@playwright/test": "^1.54.2",
         "@testing-library/jest-dom": "^6.6.4",
         "@types/node": "^24.2.1",
         "@vitejs/plugin-vue": "^5.2.4",
