--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
         "preview": "vite preview",
         "test": "vitest",
         "test:ui": "vitest --ui",
-        "test:watch": "vitest --watch"
+        "test:watch": "vitest --watch",
+        "test:e2e": "playwright test"
     },
     "dependencies": {
         "@iconify/vue": "^5.0.0",
