fix importing css file ts error

--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -19,5 +19,11 @@
             "@/*": ["src/*"]
         }
     },
-    "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "images.d.ts"]
+    "include": [
+        "src/**/*.ts",
+        "src/**/*.tsx",
+        "src/**/*.vue",
+        "images.d.ts",
+        "global.d.ts"
+    ]
 }
