--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -26,9 +26,9 @@ jobs:
             - name: build client app
               working-directory: ./client
               run: npm run build
-            - name: build server app
-              working-directory: ./server
-              run: npm run build
             - name: run unit tests
               working-directory: ./client
               run: npm run test
+            - name: run e2e tests
+              working-directory: ./client
+              run: npm run test:e2e
