--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -29,6 +29,8 @@ jobs:
             - name: run unit tests
               working-directory: ./client
               run: npm run test
+            - name: Install Playwright browsers
+              run: npx playwright install --with-deps
             - name: run e2e tests
               working-directory: ./client
               run: npm run test:e2e
