run servers in background in ci

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -28,10 +28,10 @@ jobs:
               run: npm run build
             - name: run client
               working-directory: ./client
-              run: npm run dev
+              run: npm run dev &
             - name: run server
               working-directory: ./server
-              run: npm start
+              run: npm start &
             - name: run unit tests
               working-directory: ./client
               run: npm run test
