remove running server from ci

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -29,9 +29,9 @@ jobs:
             - name: run client
               working-directory: ./client
               run: npm run dev &
-            - name: run server
-              working-directory: ./server
-              run: npm start &
+            # - name: run server
+            #   working-directory: ./server
+            #   run: npm start &
             - name: run unit tests
               working-directory: ./client
               run: npm run test
