--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -17,30 +17,34 @@ jobs:
               uses: actions/setup-node@v4
               with:
                   node-version: ${{matrix.node-version}}
-            - name: install client modules
-              working-directory: ./client
-              run: npm install
-            - name: install server modules
-              working-directory: ./server
-              run: npm install
-            - name: build client app
-              working-directory: ./client
-              run: npm run build
-            - name: run client
-              working-directory: ./client
-              run: npm run dev &
-            # - name: run server
+            - run: npm ci
+            - run: npm test
+            - run: npm build
+
+            # - name: install client modules
+            #   working-directory: ./client
+            #   run: npm install
+            # - name: install server modules
             #   working-directory: ./server
-            #   run: npm start &
-            - name: run unit tests
-              working-directory: ./client
-              run: npm run test
-            - name: Install Playwright
-              working-directory: ./client
-              run: npx playwright install
-            - name: Install Playwright browsers
-              working-directory: ./client
-              run: npx playwright install --with-deps
-            - name: run e2e tests
-              working-directory: ./client
-              run: npm run test:e2e
+            #   run: npm install
+            # - name: build client app
+            #   working-directory: ./client
+            #   run: npm run build
+            # - name: run client
+            #   working-directory: ./client
+            #   run: npm run dev &
+            # # - name: run server
+            # #   working-directory: ./server
+            # #   run: npm start &
+            # - name: run unit tests
+            #   working-directory: ./client
+            #   run: npm run test
+            # - name: Install Playwright
+            #   working-directory: ./client
+            #   run: npx playwright install
+            # - name: Install Playwright browsers
+            #   working-directory: ./client
+            #   run: npx playwright install --with-deps
+            # - name: run e2e tests
+            #   working-directory: ./client
+            #   run: npm run test:e2e
