--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -17,8 +17,17 @@ jobs:
               uses: actions/setup-node@v4
               with:
                   node-version: ${{matrix.node-version}}
+
+            - name: install dependencies
+              working-directory: ./client
             - run: npm ci
+
+            - name: run unit tests
+              working-directory: ./client
             - run: npm test
+
+            - name: build app
+              working-directory: ./client
             - run: npm build
 
             # - name: install client modules
