--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -17,18 +17,15 @@ jobs:
               uses: actions/setup-node@v4
               with:
                   node-version: ${{matrix.node-version}}
-
             - name: install dependencies
               working-directory: ./client
-            - run: npm ci
-
+              run: npm ci
             - name: run unit tests
               working-directory: ./client
-            - run: npm test
-
+              run: npm test
             - name: build app
               working-directory: ./client
-            - run: npm build
+              run: npm build
 
             # - name: install client modules
             #   working-directory: ./client
