--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -23,7 +23,7 @@ jobs:
 
             - name: build app
               working-directory: ./client
-              run: npm build
+              run: npm run build
 
             # - name: install client modules
             #   working-directory: ./client
