--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -22,9 +22,13 @@ jobs:
               working-directory: ./client
               run: npm ci
 
-            - name: Run tests
+            - name: Run unit tests
               working-directory: ./client
               run: npm test
+
+            - name: Run e2e tests
+              working-directory: ./client
+              run: npm test:e2e
 
             - name: build app
               working-directory: ./client
