--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -28,7 +28,7 @@ jobs:
 
             - name: Run e2e tests
               working-directory: ./client
-              run: npm test:e2e
+              run: npm run test:e2e
 
             - name: build app
               working-directory: ./client
