add install playwright browsers step in ci

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -26,6 +26,10 @@ jobs:
               working-directory: ./client
               run: npm test
 
+            - name: Install playwright browsers
+              working-directory: ./client
+              run: npx playwright install --with-deps
+
             - name: Run e2e tests
               working-directory: ./client
               run: npm run test:e2e
