remove all steps according to e2e tests

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -26,13 +26,13 @@ jobs:
               working-directory: ./client
               run: npm test
 
-            - name: Install playwright browsers
-              working-directory: ./client
-              run: npx playwright install --with-deps
+            # - name: Install playwright browsers
+            #   working-directory: ./client
+            #   run: npx playwright install --with-deps
 
-            - name: Run e2e tests
-              working-directory: ./client
-              run: npm run test:e2e
+            # - name: Run e2e tests
+            #   working-directory: ./client
+            #   run: npm run test:e2e
 
             - name: build app
               working-directory: ./client
