--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,9 @@
         "test": "vitest",
         "test:ui": "vitest --ui",
         "test:watch": "vitest --watch",
-        "test:e2e": "playwright test"
+        "test:e2e": "playwright test",
+        "storybook": "storybook dev -p 6006",
+        "build-storybook": "storybook build"
     },
     "dependencies": {
         "@iconify/vue": "^5.0.0",
@@ -23,16 +25,26 @@
         "vue-router": "^4.5.1"
     },
     "devDependencies": {
+        "@chromatic-com/storybook": "^4.1.1",
         "@playwright/test": "^1.54.2",
+        "@storybook/addon-a11y": "^9.1.3",
+        "@storybook/addon-docs": "^9.1.3",
+        "@storybook/addon-onboarding": "^9.1.3",
+        "@storybook/addon-vitest": "^9.1.3",
+        "@storybook/vue3-vite": "^9.1.3",
         "@testing-library/jest-dom": "^6.6.4",
         "@types/node": "^24.2.1",
         "@vitejs/plugin-vue": "^5.2.4",
         "@vue/test-utils": "^2.4.6",
         "@vue/tsconfig": "^0.7.0",
         "jsdom": "^26.1.0",
+        "storybook": "^9.1.3",
         "typescript": "~5.8.3",
         "vite": "^6.3.5",
         "vitest": "^3.2.4",
-        "vue-tsc": "^2.2.8"
+        "vue-tsc": "^2.2.8",
+        "@vitest/browser": "3.2.4",
+        "playwright": "^1.55.0",
+        "@vitest/coverage-v8": "3.2.4"
     }
 }
