create incoming call window ui, if user accepts a call it opens it in bigger size. fix error when .vue modules were not found

--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -24,6 +24,7 @@
         "src/**/*.tsx",
         "src/**/*.vue",
         "images.d.ts",
-        "global.d.ts"
+        "global.d.ts",
+        "shims-vue.d.ts"
     ]
 }
